2013-03-25  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* scripts/randfunc: Scripts to calculate values for t-tests on
	random functions. Able to aggregate data from all functions for
	the same estimators and perform t-tests on those rather than on
	individual functions. Improved generation and stuttering functions
	by abstracting data out to the top of scripts for easier
	modification. Script to calculate the mean of a column of values
	from the extracted results. Allows fast calculation of the mean
	and standard deviation of different methods for different alpha
	values.


2013-03-22  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* scripts/extract_results.sh: Script adds 0. onto the front of the
	folder numbers (005 01 03, etc) provided at the top of the
	script. This allows the correct values of alpha to be put into
	output files.

2013-03-21  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* generator.c: Minor additions to homogeneous Poisson generator to
	use for examples later

	* estimator_delta.c: Verbose flags on printlines, obsolete code
	removed.

2013-03-18  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* math_util.c: Fixed midpoint calculation where abs was being used
	instead of fabs, which resulted in incorrect calculations.

	* general_util.c: Estimate at point function returns zero if
	function is < 0 at the given point to avoid issues later on.

	* experimenter.c: Compare stuttered bins function modified
	slightly so sums are calculated before entering the pdf
	calculation loop.

	* generator.c: Gaussian generator takes into account the output
	type requested.

2013-03-17  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* estimator_IWLS.c: Fixed soul-destroyingly massive bug where beta
	estimates were not being done properly due to commented line.

	* generator.c: Random generator seeding moved to places where it
	does not reseed when multiple functions are generated in the same
	call.

	* scripts: Improvements to scripts for automatic running of random