@@ -1,7 +1,6 @@
-INDIR=/media/michal/Edison/fyp/new/random/rand_time_delay
-OUTDIR=/media/michal/Edison/fyp/new/random/rand_results
-TOP_NUMS=(04 08 1 2 3)
-BOT_NUMS=(1 2 3 4 5)
+INDIR=/media/michal/Doppler/fyp/new/morerandom/morerandom_time_delay
+OUTDIR=/media/michal/Doppler/fyp/new/morerandom/morerandom_results
+TOP_NUMS=(01 02 03 04 05 06 07 08 09 10 11 12 13 14 15)
 TD_EST_TYPES=(area pmf)
 FUNC_EST_TYPES=(baseline gaussian)
 NUM_FUNCS=5
@@ -28,7 +27,7 @@ for EST_TYPE in ${TD_EST_TYPES[@]}; do # Two types of time delay estimators
 	for TOP_NUM in ${TOP_NUMS[@]}; do # Top level directories - this is usually the alpha parameter
 	    echo -e "# $TOP_NAME$TOP_NUM" >> $OUTFILE
 	    echo -e "# $BOT_NAME\tActual delay\tMean estimate\tStandard dev\tMean error" >> $OUTFILE
-	    for BOT_NUM in ${BOT_NUMS[@]}; do # Subdirectories - different functions experimented with
+	    for BOT_NUM in $(seq 1 $NUM_FUNCS); do # Subdirectories - different functions experimented with
 		#echo "est_type=$EST_TYPE, $TOP_NAME=$TOP_NUM, $BOT_NAME=$BOT_NUM, type=$TYPE" 
 		# Extract the first stream estimate information from the input directory, stripping the text
 		RES="`grep -A 4 "Stream 1" $INDIR/$EST_TYPE/$TOP_PREFIX$TOP_NUM/$BOT_PREFIX$BOT_NUM/$TYPE/experiment_0/results.txt | sed '1d;s/Actual: //g;s/Mean est: //g;s/Est stdev: //g;s/Mean error: //g' | tr '\n' '\t'`"
@@ -46,7 +45,7 @@ done
 
 # This groups data with the same top-level parameter into the same file for all estimators. Should make things easier to put into t-tests
 if [[ -n "$TT" ]]; then
-    for BOT_NUM in ${BOT_NUMS[@]}; do # Subdirectories - different functions experimented with
+    for BOT_NUM in $(seq 1 $NUM_FUNCS); do # Subdirectories - different functions experimented with
 	for TOP_NUM in ${TOP_NUMS[@]}; do
 	    echo "" > $OUTDIR/results/errors/$TOP_PREFIX$TOP_NUM\_$BOT_PREFIX$BOT_NUM.txt
 	    for EST_TYPE in ${TD_EST_TYPES[@]}; do # Two types of time delay estimators
@@ -64,7 +63,7 @@ if [[ -n "$DV" ]]; then
     for EST_TYPE in ${TD_EST_TYPES[@]}; do # Two types of time delay estimators
 	for TYPE in ${FUNC_EST_TYPES[@]}; do # Two types of function estimators
 	    echo "" > $OUTDIR/results/estimates/$TOP_PREFIX$TOP_NUM\_$TYPE\_$EST_TYPE.txt
-	    for BOT_NUM in ${BOT_NUMS[@]}; do # Subdirectories - different functions experimented with
+	    for BOT_NUM in $(seq 1 $NUM_FUNCS); do # Subdirectories - different functions experimented with
 		for TOP_NUM in ${TOP_NUMS[@]}; do
 		    RES="`grep -A $NUM_FUNCS "Estimate delta" $OUTDIR/results/data/$TYPE\_$EST_TYPE\_$TOP_PREFIX$TOP_NUM\_$BOT_PREFIX$BOT_NUM.txt | sed '1d'`"
 		    echo -e "td_est=$EST_TYPE, func_est=$TYPE, $BOT_NAME=$BOT_NUM\n$RES\n\n" >> $OUTDIR/results/estimates/$TOP_PREFIX$TOP_NUM\_$TYPE\_$EST_TYPE.txt
@@ -81,8 +80,7 @@ if [[ -n "$EV" ]]; then
 	for EST_TYPE in ${TD_EST_TYPES[@]}; do # Two types of time delay estimators
 	    for TYPE in ${FUNC_EST_TYPES[@]}; do # Two types of function estimators
 		echo "" > $OUTDIR/results/alpha_errors/$TOP_PREFIX$TOP_NUM\_$TYPE\_$EST_TYPE.txt
-		for BOT_NUM in ${BOT_NUMS[@]}; do # Subdirectories - different functions experimented with
-
+		for BOT_NUM in $(seq 1 $NUM_FUNCS); do # Subdirectories - different functions experimented with
 		    RES="`grep -A $NUM_FUNCS "Estimate error" $OUTDIR/results/data/$TYPE\_$EST_TYPE\_$TOP_PREFIX$TOP_NUM\_$BOT_PREFIX$BOT_NUM.txt | sed '1d'`"
 		    echo -e "td_est=$EST_TYPE, func_est=$TYPE, $BOT_NAME=$BOT_NUM\n$RES\n\n" >> $OUTDIR/results/alpha_errors/$TOP_PREFIX$TOP_NUM\_$TYPE\_$EST_TYPE.txt
 		done
