@@ -1,19 +1,17 @@
 EXP_PFILE=/home/michal/Dropbox/study/university/final_year/final-year-project/src/exp_params.txt
 DEF_PFILE=/home/michal/Dropbox/study/university/final_year/final-year-project/src/params.txt
-INDIR=/media/michal/Edison/fyp/new/random/rand_params
-STREAM_DIR=/media/michal/Edison/fyp/new/random/rand_streams
-GOODNESS_LOC=/media/michal/Edison/fyp/new/random/
+INDIR=/media/michal/Edison/fyp/new/morerandom/morerandom_params
+STREAM_DIR=/media/michal/Edison/fyp/new/morerandom/morerandom_streams
+GOODNESS_LOC=/media/michal/Edison/fyp/new/morerandom/
 LAUNCHER_LOC=/home/michal/Dropbox/study/university/final_year/final-year-project/src/deltastream
-OUTDIR=/media/michal/Edison/fyp/new/random/rand_time_delay
+OUTDIR=/media/michal/Edison/fyp/new/morerandom/morerandom_time_delay
 FOLDER_PREFIX=alpha_
 FUNC_PREFIX=f
 BESTFILE=$OUTDIR/best_params.txt
 NSTREAMS=2
 NFUNCS=5
 
-ALPHA_VALUES=(04 08 1 2 3)
-FUNC_VALUES=(1 2 3 4 5)
-
+ALPHA_VALUES=(01 02 03) #(04 05 06 07 08 09 10 11 12 13 14 15)
 
 while true; do
     echo -e "Running this script will edit some parameters in the files $EXP_PFILE and $DEF_PFILE.\nResults will be output to $OUTDIR, stream data will be read from $STREAM_DIR,\nbest parameter information will be read from $INDIR.\nAre you sure you want to run it?"
@@ -42,25 +40,15 @@ done
 sed -i 's/run_stuttered [a-zA-Z]*/run_stuttered no/' $EXP_PFILE
 
 for TD_EST_TYPE in pmf area; do
-    if [ ! -d "$OUTDIR/$TD_EST_TYPE" ]; then
-	mkdir $OUTDIR/$TD_EST_TYPE
-    fi
     # Set the delta estimation method to the estimator type that we are using.
     sed -i "s/delta_est_method [a-zA-Z]*/delta_est_method $TD_EST_TYPE/" $DEF_PFILE
     for ALPHA in ${ALPHA_VALUES[@]}; do
-	if [ ! -d "$OUTDIR/$TD_EST_TYPE/$FOLDER_PREFIX$ALPHA" ]; then
-	    mkdir $OUTDIR/$TD_EST_TYPE/$FOLDER_PREFIX$ALPHA
-	fi
-	for FUNC in ${FUNC_VALUES[@]}; do
-	    if [ ! -d "$OUTDIR/$TD_EST_TYPE/$FOLDER_PREFIX$ALPHA" ]; then
-		mkdir $OUTDIR/$TD_EST_TYPE/$FOLDER_PREFIX$ALPHA/$FUNC_PREFIX$FUNC
-	    fi	    
+	for FUNC in $(seq 1 $NFUNCS); do
 	    for TYPE in ${ENAMES[@]}; do
 		if [ ! -d "$OUTDIR/$TD_EST_TYPE/$FOLDER_PREFIX$ALPHA/$FUNC_PREFIX$FUNC" ]; then
-		    mkdir $OUTDIR/$TD_EST_TYPE/$FOLDER_PREFIX$ALPHA/$FUNC_PREFIX$FUNC/$TYPE
+		    mkdir -p $OUTDIR/$TD_EST_TYPE/$FOLDER_PREFIX$ALPHA/$FUNC_PREFIX$FUNC/$TYPE
 		fi
-
-		echo "alpha=$ALPHA, func=$FUNC, type=$TYPE" >> $BESTFILE
+		echo "alpha=$ALPHA, func=$FUNC, type=$TYPE, td_type=$TD_EST_TYPE" >> $BESTFILE
 	        # Extract the goodness and experiment number from the aggregate file
 		RES="`cat $GOODNESS_LOC/agg_goodness_$TYPE.txt | grep -A 1 "alpha_$ALPHA func$FUNC" | sed '1d;'`"
 		GOODNESS_ARR=(${RES// / }) # split the above string on a space to get an array - exp num is at index 1
